# Warppy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  warppy_roadmap.md
.github/workflows/: ci.yml
examples/: card_draw.py  pi_estimation.py  pi_estimation_v2.py  spike_card_draw_raw.py
src/warppy/: __init__.py  bindings.py  builder.py  errors.py  gpu_kernel.py  kernel.py  transpiler.py  types.py  wgpu_backend.py
src/warppy/transpiler/: __init__.py  ast_walker.py  codegen.py  type_checker.py
tests/: test_bindings.py  test_builder.py  test_errors.py  test_kernel.py  test_transpiler.py  test_types.py
