[project]
name = "warppy"
version = "0.1.0"
description = "Python GPU compute via a fluent builder API — no WGSL boilerplate"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["gpu", "wgsl", "compute", "wgpu", "monte carlo", "parallel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "wgpu>=0.19",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/warppy"]

[tool.ruff]
line-length = 100
target-version = "py312"
